Make responsiveness test on all questions with iPad Pro (12.9 inch) with 1.024x. Test passed. Modify correct/wrong color in CSS

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -267,6 +267,14 @@ header h1{
     text-align: right;
 }
 
+.correct-answers-count {
+    color: green;
+}
+
+.wrong-answers-count {
+    color: red;
+}
+
 .correct-heading{
     color: green;
     font-size: 5rem;
